--- a/Tetris_Game/Tetris_Game.vcxproj
+++ b/Tetris_Game/Tetris_Game.vcxproj
@@ -129,25 +129,31 @@
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="BlockManager.h" />
+    <ClInclude Include="DataBase.h" />
     <ClInclude Include="DoubleBuffer.h" />
     <ClInclude Include="Header.h" />
     <ClInclude Include="Logo.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Ranking.h" />
     <ClInclude Include="Scenes.h" />
     <ClInclude Include="ScenesManager.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="Stage.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="BlockManager.cpp" />
+    <ClCompile Include="DataBase.cpp" />
     <ClCompile Include="DoubleBuffer.cpp" />
     <ClCompile Include="Logo.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Ranking.cpp" />
     <ClCompile Include="Scenes.cpp" />
     <ClCompile Include="ScenesManager.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="Stage.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
